--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,22 @@
 
 
-<div class="center hero-unit">
+<div class="span12 hero-unit">
   <h9>Metabolism in response to malnutrition</h9>
   <br>
     <br>
 
-  <%=link_to image_tag("mom.jpg") %>
-    <%=link_to image_tag("sysbio.jpeg")  %>
-    <%=link_to image_tag("icon_small_bill_melinda_gates_foundation_logo.png") %>
+ 	<table>
+ 	<tr>
+ 	    <td width=50% , height="100"% > <%=link_to image_tag("mom.jpg" ,:height=>300,:width=>400) %> </td>
 
-</a>Photo credit: <a href="https://www.flickr.com/photos/hdptcar/2530902082/">hdptcar</a> / <a href="http://foter.com/">Foter</a> / <a href="http://creativecommons.org/licenses/by/2.0/">Creative Commons Attribution 2.0 Generic (CC BY 2.0)</a>
+ 	 	<td width=50% ,height=100>News:<br>1.The website is on</td>
+ 	 	</tr>
+
+ 	</table>
+ 	 	        <h4></a>Photo credit: <a href="https://www.flickr.com/photos/hdptcar/2530902082/">hdptcar</a> / <a href="http://foter.com/">Foter</a> / <a href="http://creativecommons.org/licenses/by/2.0/">Creative Commons Attribution 2.0 Generic (CC BY 2.0)</a></h4>
+
+    <%=link_to image_tag("sysbio.jpeg",:width=>150,:width=>150 ,:class =>"pull-down")  %>
+    <%=link_to image_tag("icon_small_bill_melinda_gates_foundation_logo.png",:width=>150,:height=>150) %>
 
 
 
