--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -76,7 +76,7 @@
 </td>
 </tr>
 </table>
-<p>lief will work on the development of a simulation-ready genome-scale metabolic model (GEM) for skeletal muscle cells (myocytes). Further on, he will take part in the integration with other models, including a blood compartment, as well as the integration of omics data to assess the metabolic changes associated with diet, in different tissues.
+<p>Lief will work on the development of a simulation-ready genome-scale metabolic model (GEM) for skeletal muscle cells (myocytes). Further on, he will take part in the integration with other models, including a blood compartment, as well as the integration of omics data to assess the metabolic changes associated with diet, in different tissues.
 </p>
 
 
