--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,16 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
+<header class="navbar  nav-fixedtop navbar-custom">
+  <div class="navbar-header">
     <div class="container">
-      <%= link_to "sysbio/Gates foundation" , root_path , id:"logo"%>
-
+        <%= link_to "sysbio/Gates foundation" , root_path , id:"logo"%>
+                  <%= link_to image_tag "sysbio.jpeg",:width => 100, :height => 50 %> 
+                   <%= link_to image_tag "icon_small_bill_melinda_gates_foundation_logo.png",:width => 50, :height => 50 %>
       <nav>
-        <ul class="nav pull-left">
-
+        <ul class="nav pull-right">
+	                  <li><%= link_to "home",    root_path ,id:"menue_items" %></li>
+  
           <li><%= link_to "scope",    scope_path ,id:"menue_items" %></li>
           <li><%= link_to "team",  team_path ,id:"menue_items" %></li>
-
-
-          <li><%= link_to "contact",  contacts_path,id:"menue_items"%></li>
+          <li><%= link_to "contact",  contact_path,id:"menue_items"%></li>
           <li><%= link_to "Sign in", '#' ,id:"menue_items"%></li>
         </ul>
       </nav>
